--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <!-- Main WebGL functions -->
 <script type="text/javascript">
 
+
+
 //
 //   Space for some global variables
 //
@@ -444,8 +446,15 @@ function createProgram(gl, vertexSource, fragmentSource) {
   return program;
 }
 
-
-
+//This function converts hex color code to RGB color code.
+function hexToRgb(hex) {
+  var result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
+  return result ? {
+    r: parseInt(result[1], 16),
+    g: parseInt(result[2], 16),
+    b: parseInt(result[3], 16)
+  } : null;
+}
 /// This function is called when the transfer function texture on the GPU should be
 /// updated.  Whether the transfer function values are computed here or just retrieved
 /// from somewhere else is up to decide for the implementation.
@@ -463,6 +472,15 @@ function updateTransferFunction(gl, transferFunction) {
   // This data should, at the end of your code, contain the information for the transfer
   // function.  Each value is stored sequentially (RGBA,RGBA,RGBA,...) for 256 values,
   // which get mapped to [0, 1] by OpenGL
+
+  
+  const alpha = Number(document.getElementById("alpha").value) / 100;
+  const red = Number(document.getElementById("red").value) / 100;
+  const green = Number(document.getElementById("green").value) / 100;
+  const blue = Number(document.getElementById("blue").value) / 100;
+
+  console.log('Opacity', alpha);
+
   let data = new Uint8Array(256 * 4);
 
 
@@ -473,40 +491,73 @@ function updateTransferFunction(gl, transferFunction) {
   // relatively simple ramp with the first 50 values being set to 0 to reduce the noise in
   // the image.  The remainder of the ramp is just using different angles for the color
   // components
-  const cutoff = 50;
+  // 256 pixels
+  // const cutoff = 50;
 
-  for (let i = 0; i < cutoff * 4; i += 4) {
-    // Set RGBA all to 0
-    data[i] = 0;
-    data[i + 1] = 0;
-    data[i + 2] = 0;
-    data[i + 3] = 0;
-  }
+  // for (let i = 0; i < cutoff * 4; i += 4) {
+  //   // Set RGBA all to 0
+  //   data[i] = 0; //R
+  //   data[i + 1] = 0; //G
+  //   data[i + 2] = 0; // B
+  //   data[i + 3] = 0; // A
+  // }
 
-  // For now, just create a linear ramp from 0 to 1. We start at the cutoff value and fill
-  // the rest of the array
-  for (let i = cutoff * 4; i < 256 * 4; i += 4) {
-    // convert i into a value [0, 256] and set it 
-    const it = i / 4;
-    data[i] = 2 * it;
-    data[i + 1] = it;
-    data[i + 2] = 3 * it;
-    data[i + 3] = it;
-  }
+  // // For now, just create a linear ramp from 0 to 1. We start at the cutoff value and fill
+  // // the rest of the array
+  // for (let i = cutoff * 4; i < 256 * 4; i += 4) {
+  //   // convert i into a value [0, 256] and set it 
+  //   const it = i / 4;
+  //   data[i] = 2 * it; // set R to 2 * 1/4, 2 * 4/4 etc
+  //   data[i + 1] = it; // set G to 1/4, 4/4, 8/4 etc (this is the widest?)
+  //   data[i + 2] = 3 * it; //set B to 3 * 1/4, 3 * 4/4, 3 * 8/4 etc. 
+  //   data[i + 3] = it;
+  // }
 
   /// End of the provided transfer function
   ////////////////////////////////////////////////////////////////////////////////////////
 
   // @TODO:  Replace the transfer function specification above with your own transfer
   //         function editor result
+  
+  const cutoff = 50;
+
+  for (let i = 0; i < cutoff * 4; i += 4) {
+      
+      data[i] =  0; //R
+      data[i + 1] = 0; //G
+      data[i + 2] = 0;  // B
+      data[i + 3] = 0; // A
+  }
+  
+  for (let i = cutoff * 4; i < cutoff * 8; i += 4) {
+      const t = i / 4;
+      data[i] = t * red; //R
+      data[i + 1] = t * green; //G
+      data[i + 2] = t * blue;  // B
+      data[i + 3] = t * (alpha / 2); // A
+  }
+
+  for (let i =  cutoff * 8; i < cutoff * 16; i += 4) {
+      const t = i / 4;
+      data[i] = t * red; //R
+      data[i + 1] = t * green; //G
+      data[i + 2] = t * blue;  // B
+      data[i + 3] = t * (alpha / 4); // A
+  }
+
+  for (let i =  cutoff * 16; i < 256 * 4; i += 4) {
+      const t = i / 4;
+      data[i] = t * red; //R
+      data[i + 1] = t * green; //G
+      data[i + 2] = t * blue;  // B
+      data[i + 3] = t * (alpha / 16); // A
+  }
 
   // Upload the new data to the texture
   console.log(117, "Updating the transfer function texture");
   gl.bindTexture(gl.TEXTURE_2D, transferFunction);
   gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, 256, 1, 0, gl.RGBA, gl.UNSIGNED_BYTE, data);
 }
-
-
 
 /// Function that renders the bounding box using the provided model and view matrices. The
 /// front-facing triangles are rendered into the framebuffer provided at 'fbFront', the
@@ -987,6 +1038,7 @@ function triggerRendering() {
 // won't be visible.
 function triggerTransferFunctionUpdate() {
   TransferFunctionIsDirty = true;
+
 }
 
 // Signals an error to the user
@@ -999,6 +1051,7 @@ function postError(msg) {
 
 
 <body onload="main();">
+
   <p id="error"></p>
   <canvas id="glCanvas" width="640" height="480"></canvas>
   <p>
@@ -1033,6 +1086,11 @@ function postError(msg) {
     Add some UI elements here to modify the transfer function.  As mentioned above, you need to call the function 'triggerTransferFunctionUpdate' to trigger and update of the GPU representation of the transfer function texture.  If you don't call that function, no change will be visible.
   -->
 
+  <div>Transfer function:</div>
+  <div> Alpha: <input type="range" min="0" max="100" value="2" class="slider" id="alpha" oninput="triggerTransferFunctionUpdate()"></div>
+  <div> Red: <input type="range" min="0" max="100" value="100" class="slider" id="red" oninput="triggerTransferFunctionUpdate();"></div>
+  <div> Green: <input type="range" min="0" max="100" value="100" class="slider" id="green" oninput="triggerTransferFunctionUpdate();"></div>
+  <div> Blue: <input type="range" min="0" max="100" value="100" class="slider" id="blue" oninput="triggerTransferFunctionUpdate();"></div>
 
 </body>
 
